--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
 		"@types/node": "20",
 		"@types/react": "18",
 		"@types/react-dom": "18",
+		"@typescript-eslint/eslint-plugin": "7.11.0",
+		"@typescript-eslint/parser": "7.11.0",
+		"autoprefixer": "10.4.19",
 		"eslint": "8",
 		"eslint-config-next": "14.2.7",
 		"postcss": "8",
