--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
 		"@types/react-dom": "18",
 		"@typescript-eslint/eslint-plugin": "7.11.0",
 		"@typescript-eslint/parser": "7.11.0",
-		"autoprefixer": "10.4.19",
+		"autoprefixer": "10.4.20",
 		"eslint": "8",
 		"eslint-config-next": "14.2.7",
-		"postcss": "8",
+		"eslint-config-prettier": "9.1.0",
+		"eslint-plugin-prettier": "5.2.1",
+		"eslint-plugin-react-hooks": "4.6.2",
+		"eslint-plugin-react-refresh": "0.4.11",
+		"postcss": "8.4.45",
 		"prettier": "3.3.3",
 		"prettier-plugin-tailwindcss": "0.6.6",
 		"tailwindcss": "3.4.10",
