--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"prettier-format": "prettier --config .prettierrc 'src/**/*.{js,jsx,ts,tsx}' --write"
 	},
 	"dependencies": {
+		"@radix-ui/react-alert-dialog": "^1.1.2",
+		"@radix-ui/react-dialog": "^1.1.2",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-scroll-area": "^1.2.0",
 		"@radix-ui/react-slot": "^1.1.0",
