chore(global): :sparkles: add new scopes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-	"conventionalCommits.scopes": ["dashboard", "global"]
+	"conventionalCommits.scopes": [
+		"dashboard",
+		"dashboard/appointments",
+		"dashboard/patients",
+		"dashboard/pets",
+		"global"
+	]
 }
