--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"@radix-ui/react-scroll-area": "^1.2.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-toast": "^1.2.2",
+		"@tanstack/react-query": "^5.59.15",
+		"@tanstack/react-query-devtools": "^5.59.15",
 		"axios": "^1.7.7",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
