--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"date-fns": "^4.1.0",
 		"lucide-react": "^0.438.0",
 		"next": "14.2.7",
+		"next-auth": "4.24.10",
 		"react": "18",
 		"react-dom": "18",
 		"tailwind-merge": "^2.5.2",
