--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"lucide-react": "^0.438.0",
 		"next": "14.2.7",
 		"next-auth": "4.24.10",
+		"next-themes": "^0.4.3",
 		"react": "18",
 		"react-dom": "18",
 		"tailwind-merge": "^2.5.2",
