--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"zustand": "5.0.0-rc.2"
 	},
 	"devDependencies": {
+		"@react-pdf/types": "^2.7.0",
 		"@types/node": "^20.17.9",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
