--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"@radix-ui/react-switch": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.1",
 		"@radix-ui/react-toast": "^1.2.2",
-		"@react-pdf/renderer": "^4.1.5",
+		"@react-pdf/renderer": "3.4.5",
 		"@tanstack/react-query": "^5.62.0",
 		"@tanstack/react-query-devtools": "^5.62.0",
 		"axios": "^1.7.8",
