--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
 	},
 	"devDependencies": {
 		"@react-pdf/types": "^2.7.0",
-		"@tanstack/react-query-devtools": "4",
+		"@tanstack/react-query-devtools": "^5.62.7",
 		"@types/node": "^20.17.9",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
